# Juniorprint

./: README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: demo.py
juniorprint/: __init__.py  formatter.py  printer.py  styles.py
juniorprint.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
