[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juniorprint"
version = "0.1.3"
description = "Print colored text easily in Python"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [{name="Hero", email="joscelynrandrianilaina@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "colorama"
]
